--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-sortable": "1.2",
     "react-textarea-autosize": "^5.2.1",
     "react-transition-group": "1",
+    "react-vega": "^3.1.2",
+    "react-vega-lite": "^1.1.3",
     "react-virtualized": "^9.7.2",
     "recompose": "^0.26.0",
     "redux": "^3.5.2",
@@ -74,6 +76,8 @@
     "stack-source-map": "^1.0.4",
     "tether": "^1.2.0",
     "underscore": "^1.8.3",
+    "vega": "^3.2.1",
+    "vega-lite": "^2.3.1",
     "webpack-dev-middleware": "^1.12.0",
     "z-index": "0.0.1"
   },
