--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "2.19.3",
     "node-libs-browser": "^2.0.0",
     "normalizr": "^3.0.2",
+    "npm": "^6.0.0",
     "number-to-locale-string": "^1.0.1",
     "password-generator": "^2.0.1",
     "prop-types": "^15.5.7",
@@ -76,8 +77,10 @@
     "stack-source-map": "^1.0.4",
     "tether": "^1.2.0",
     "underscore": "^1.8.3",
-    "vega": "^3.2.1",
+    "vega": "^3.3.1",
     "vega-lite": "^2.3.1",
+    "vega-tooltip": "^0.9.14",
+    "vega-typings": "^0.2.16",
     "webpack-dev-middleware": "^1.12.0",
     "z-index": "0.0.1"
   },
